Fixed issue with wrong margin position

--- a/css/itm-style.css
+++ b/css/itm-style.css
@@ -220,60 +220,60 @@ Web:		http://www.itmaniax.com
 }
 /******************************************************************************/
 .itm-m-t-5 {
-    margin-bottom: 5px;
+    margin-top: 5px;
 }
 .itm-m-t-10 {
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 .itm-m-t-15 {
-    margin-bottom: 15px;
+    margin-top: 15px;
 }
 .itm-m-t-20 {
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .itm-m-t-25 {
-    margin-bottom: 25px;
+    margin-top: 25px;
 }
 .itm-m-t-30 {
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
 /******************************************************************************/
 .itm-m-l-5 {
-    margin-bottom: 5px;
+    margin-left: 5px;
 }
 .itm-m-l-10 {
-    margin-bottom: 10px;
+    margin-left: 10px;
 }
 .itm-m-l-15 {
-    margin-bottom: 15px;
+    margin-left: 15px;
 }
 .itm-m-l-20 {
-    margin-bottom: 20px;
+    margin-left: 20px;
 }
 .itm-m-l-25 {
-    margin-bottom: 25px;
+    margin-left: 25px;
 }
 .itm-m-l-30 {
-    margin-bottom: 30px;
+    margin-left: 30px;
 }
 /******************************************************************************/
 .itm-m-r-5 {
-    margin-bottom: 5px;
+    margin-right: 5px;
 }
 .itm-m-r-10 {
-    margin-bottom: 10px;
+    margin-right: 10px;
 }
 .itm-m-r-15 {
-    margin-bottom: 15px;
+    margin-right: 15px;
 }
 .itm-m-r-20 {
-    margin-bottom: 20px;
+    margin-right: 20px;
 }
 .itm-m-r-25 {
-    margin-bottom: 25px;
+    margin-right: 25px;
 }
 .itm-m-r-30 {
-    margin-bottom: 30px;
+    margin-right: 30px;
 }
 /******************************************************************************/
 /******************************************************************************/
